--- a/block-1/index.html
+++ b/block-1/index.html
@@ -21,14 +21,13 @@
 	<p>All the description goes here ...</p>
 	<h3>Education</h3>
 	<ul>
-		<li>Techno India, WBUT, Kolkata</li>
-		<li>Patna Science College, Patna</li>
-		<li>Don Bosco Academy, Patna</li>
+		<li>WBUT, Kolkata</li>
+		<li>Science College</li>
+		<li>Don Bosco, Patna</li>
 	</ul>
 	<h3>Work Experience</h3>
 	<ul>
-		<li>WebSphere Specialist, IBM</li>
-		<li>WebSphere Lead, TCS</li>
+		<li>Front End Developer</li>
 	</ul>
 	<h3>Links</h3>
 	<ul>
